--- a/hmdp/package.json
+++ b/hmdp/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "axios": "^1.6.7",
     "vite": "^5.1.6",
     "vue-router": "^4.3.0"
   }
